--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-autopep8==1.5.7
-Babel==2.9.1
-joblib==1.1.0
-numpy==1.21.4
+click==8.0.3
+colorama==0.4.4
+Flask==2.0.2
+gunicorn==20.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+numpy==1.22.0
 opencv-python==4.5.5.62
-pycodestyle==2.7.0
-pytz==2021.3
-scikit-learn==1.0.1
-scipy==1.7.2
-threadpoolctl==3.0.0
-tkcalendar==1.6.1
-toml==0.10.2
+Werkzeug==2.0.2
